corrected gif file name
BikeBox.gif

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         <div class="container_24">
           <h3>Portfolio</h3>
           <div class="grid_8">
-            <img src="image/Bikebox.gif" class="mobile" alt="Bikebox Cycle Storage App">
+            <img src="image/BikeBox.gif" class="mobile" alt="Bikebox Cycle Storage App">
             <div style="text-align:center;margin-top:30px;">
               <a href="https://marvelapp.com/12fjdgh6">BikeBox Cycle Storage App</a>
             </div>
