fixed masters thesis linked
link opens in a new tab
link shows a tooltip on hover

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                   <br>
                   <br>
                   <span style="font-weight:bold;font-size:16px;">Thesis</span> :
-                  <a href="http://URN.fi/URN:NBN:fi:tty-201711232243" style="font-size:13px;">Concept Development and User Experience Measurement of
+                  <a href="http://URN.fi/URN:NBN:fi:tty-201711232243" target="_blank" style="font-size:13px;" title="Thesis report">Concept Development and User Experience Measurement of
                     Dipor Dashboard for Monitoring Status for Digital Service Development Projects
                   </a>
                 </p>
