Added tooltip to Sr. SQA
Senior Software Quality Assurance Engineer

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
             <div class="container left">
               <div class="content">
                 <img class="image" src="image/work-briefcase.png" alt="work">
-                <h5>Sr. SQA Engineer</h5>
+                <h5 title="Senior Software Quality Assurance Engineer">Sr. SQA Engineer</h5>
                 <h6>2014 (May - August)</h6>
                 <p style="font-size:16px;"> Sampo Software Oy
                 </p>
