added target and title to portfolio links

--- a/index.html
+++ b/index.html
@@ -94,13 +94,13 @@
           <div class="grid_8">
             <img src="image/BikeBox.gif" class="mobile" alt="Bikebox Cycle Storage App">
             <div style="text-align:center;margin-top:30px;">
-              <a href="https://marvelapp.com/12fjdgh6">BikeBox Cycle Storage App</a>
+              <a href="https://marvelapp.com/12fjdgh6" target="_blank" title="Interactive Prototype for BikeBox on Marvel">BikeBox Cycle Storage App</a>
             </div>
           </div>
           <div class="grid_15">
             <img src="image/APInfDashboard.gif" class="ipad" alt="APInf Dashboard">
             <div style="text-align:center;margin-top:30px;">
-              <a href="https://apinf.io">APInf API Monitoring Dashboard</a>
+              <a href="https://apinf.io" target="_blank" title="APInf REST API Dashboard">APInf API Monitoring Dashboard</a>
             </div>
           </div>
         </div>
