changed favicon file name
Favicon.png to favicon.png

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta content="author" description="Nazia Hasan">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-    <link rel="shortcut icon" type="image/png" href="image/Favicon.png">
+    <link rel="shortcut icon" type="image/png" href="image/favicon.png">
     <script type="text/javascript" src="js/jquery-1.11.3.min.js"></script>
     <link rel="stylesheet" href="css/960_24_col.css">
     <link rel="stylesheet" href="css/reset.css">
