adding black target for resume download anchor

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
               </p>
             </blockquote>
             <p>
-              <a href="files/Nazia_Hasan_Resume.pdf"  download="Nazia_Hasan_Resume.pdf" class="button" title="Nazia_Hasan_Resume.pdf">Download Resume</a>
+              <a href="files/"  download="Nazia_Hasan_Resume.pdf" target="_blank" class="button" title="Nazia_Hasan_Resume.pdf">Download Resume</a>
             </p>
           </div>
         </div>
