Changes in content and Markup
1. Added additional text in introduction.
2. Added Master's thesis title in Experience
3. Made links to open on new windows instead of the current one.

--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
           UX Designer with interests on developers’ experience, dashboard design and location-based services.
           <br>Have an M.Sc. degree with UX major, 2+ years’ work experience and prior expertise in Software Quality Assurance.
           <br>Detail-oriented & collaborative worker.
+          <br>Ready to explore new fields and face new challenges.
         </p>
         <br>
         <p style="text-align:center;">
@@ -198,8 +199,9 @@
                 <p>Tampere University of Technology - Tampere, Finland</p>
                 <p><b>Major</b>: User Experience</p>
                 <p><b>Thesis</b>:
-                  <a href="https://dspace.cc.tut.fi/dpub/handle/123456789/25389">
-                    click here
+                  <a href="https://dspace.cc.tut.fi/dpub/handle/123456789/25389" target="_blank" title="Master's Thesis Report">
+                    Concept Development and User Experience Measurement of Dipor Dashboard
+                    for Monitoring Status for Digital Service Development Projects
                   </a>
                 </p>
               </div>
@@ -264,17 +266,17 @@
           <br>
           <div class="d-flex justify-content-center">
             <div class="p-2">
-              <a href="https://github.com/Nazarah/UX-Portfolio" title="Nazarah - UX Portfolio">
+              <a href="https://github.com/Nazarah/UX-Portfolio" target="_blank" title="Nazarah - UX Portfolio">
                 <i class="fab fa-github fa-3x" style="padding:0 5px;"></i>
               </a>
             </div>
             <div class="p-2">
-              <a href="https://www.linkedin.com/in/naziahasan" title="Nazia Hasan ｜ LinkedIn">
+              <a href="https://www.linkedin.com/in/naziahasan" target="_blank" title="Nazia Hasan ｜ LinkedIn">
                 <i class="fab fa-linkedin fa-3x" style="padding:0 5px;"></i>
               </a>
             </div>
             <div class="p-2">
-              <a href="https://twitter.com/nazarahthecat" title="Nazia Hasan (@NazarahTheCat) ｜ Twitter">
+              <a href="https://twitter.com/nazarahthecat" target="_blank" title="Nazia Hasan (@NazarahTheCat) ｜ Twitter">
                 <i class="fab fa-twitter fa-3x" style="padding:0 5px;"></i>
               </a>
             </div>
