change in markup content
1. resized introductory content in index.html to contain the resume download button within the slide1 boundary in mobile view

--- a/index.html
+++ b/index.html
@@ -78,8 +78,7 @@
         <p style="margin-bottom:10px;text-align:center;">
           UX Designer with interests on developers’ experience, dashboard design and location-based services.
           <br>Have an M.Sc. degree with UX major, 2+ years’ work experience and prior expertise in Software Quality Assurance.
-          <br>Detail-oriented & collaborative worker.
-          <br>Ready to explore new fields and face new challenges.
+          <br>Detail-oriented, collaborative worker, ready to face new challenges.
         </p>
         <br>
         <p style="text-align:center;">
