Changes in content, resume and portfolio
1. made changes to introductory content in index.html

2. Updated resume and portfolio files.

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       <h1 style="margin-bottom:20px;text-align:center;">Nazia Hasan</h1>
       <h2 style="margin-bottom:20px;text-align:center;">UI / UX Designer</h2>
         <p style="margin-bottom:10px;text-align:center;">
-          UX Designer with interests on developers’ experience, dashboard design and location-based services.
+          UX Designer with interests on developers’ experience, dashboard design, location-based services, industrial machinery monitoring and well-being technology.
           <br>Have an M.Sc. degree with UX major, 2+ years’ work experience and prior expertise in Software Quality Assurance.
           <br>Detail-oriented, collaborative worker, ready to face new challenges.
         </p>
