Announcement for content and website updates
1. changed html markup for updatig the site with new content and UI
2. added latest resume.

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
       <!--collapsible nav bar for small screen-->
       <div class="collapse navbar-collapse" id="collapsibleNavbar">
         <ul class="navbar-nav">
+          <!--
           <li class="nav-item">
             <a class="nav-link" href="#slide1">About Me</a>
           </li>
@@ -67,6 +68,7 @@
           <li class="nav-item">
             <a class="nav-link" href="#slide5">Contact</a>
           </li>
+          -->
         </ul>
       </div>
     </nav>
@@ -76,9 +78,18 @@
       <h1 style="margin-bottom:20px;text-align:center;">Nazia Hasan</h1>
       <h2 style="margin-bottom:20px;text-align:center;">UI / UX Designer</h2>
         <p style="margin-bottom:10px;text-align:center;">
+          <!--
           UX Designer with interests on developers’ experience, dashboard design, location-based services, industrial machinery monitoring and well-being technology.
           <br>Have an M.Sc. degree with UX major, 4+ years’ Designing experience and prior expertise in Software Quality Assurance.
           <br>Detail-oriented, Empathetic, collaborative worker, ready to face new challenges.
+          -->
+          Hi There!
+          <br>Thanks for visiting my site.
+          <br>I am currently updating the UI and the contents.
+          <br>The site will be back and running latest on Sunday,20th January, 2019.
+          <br>If you have some queries, feel free to contact me with my email <em>nhasan1987@gmail.com</em> or call me at <em>+358465760561</em>.
+          <br>
+          <br> Thanks! Have a Nice Day!
         </p>
         <br>
         <p style="text-align:center;">
@@ -87,11 +98,12 @@
     </div>
     <!--1st parallax section ends-->
     <!--1st normal section starts-->
+    <!--
     <div class="container-fluid" id="slide2">
       <h2 style="text-align:center;">UX Skills</h2>
       <br>
       <br>
-      <!--Row for skillsset starts-->
+
       <div class="row" style="margin:0 20px;">
         <div class="col-sm-3">
           <img class="img-fluid mx-auto d-block" src="image/meeting.png" alt="User Research" style="width:100px;height:100px;">
@@ -162,10 +174,12 @@
           <p style="text-align:center;">Front End Development</p>
         </div>
       </div>
-      <!--Row for skillsset ends-->
+
     </div>
+    -->
     <!--1st normal section ends-->
     <!--2nd parallax section starts-->
+    <!--
     <div class="container-fluid" id="slide3">
       <h2 style="text-align:center;">UX Portfolio</h2>
       <br>
@@ -199,15 +213,17 @@
         </div>
       </div>
     </div>
+    -->
     <!--2nd parallax section ends-->
     <!--2nd normal section starts-->
+    <!--
     <div class="container-fluid" id="slide4">
       <h2 style="text-align:center;">Experiences</h2>
       <br>
-      <!--timeline markup starts-->
+
       <div class="row" style="margin:0 20px;">
         <div class="col-sm-12">
-          <!--timeline starts-->
+
           <div class="timeline">
             <div class="timelinecontainer left">
               <div class="content">
@@ -260,21 +276,23 @@
               </div>
             </div>
           </div>
-          <!--timeline ends-->
+
       </div>
-      <!--timeline markup ends-->
+
       </div>
     </div>
+    -->
     <!--2nd normal section ends-->
     <!--3rd parallax section starts-->
+    <!--
     <div class="container-fluid" id="slide5">
       <br>
       <br>
       <br>
       <h2 style="text-align:center;">Contact</h2>
-      <!--row starts-->
+      <
       <div class="row" style="margin: 0 20px;">
-        <!--column for contact details starts-->
+
         <div class="col-sm-6">
           <br>
           <br>
@@ -306,8 +324,7 @@
             </div>
           </div>
         </div>
-        <!--column for contact details ends-->
-        <!--column for image & quote starts-->
+
         <div class="col-sm-6">
           <br>
           <img class="img-fluid mx-auto d-block" src="image/Nazia_Hasan.png" alt="Nazia Hasan" style="width:200px;height:200px;">
@@ -318,10 +335,11 @@
             <br>Photography Hobbyist
           </p>
         </div>
-        <!--column for image & quote ends-->
+
       </div>
-      <!--row ends-->
+      
     </div>
+    -->
     <!--3rd parallax section ends-->
   </body>
 </html>
