New changes and files
1. Updated CV File
2. Added mPass Project Presentation
3. Changed GitHub Repo URL

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
           <div class="view overlay zoom" id="dipor">
             <img class="img-fluid mx-auto d-block  wow slideInUp delay-2s" src="img/diporDashboard.jpg" alt="Saalasti">
             <div class="mask flex-center rgba-cyan-strong">
-              <a href="https://github.com/Nazarah/Nazarah.github.io/blob/master/files/Dipor_Usability_Evaluation.pd" style="text-align:center;" class="white-text" onclick="window.open('../files/Dipor_Usability_Evaluation.pdf')" target="_blank" title="Saalasti Web UI for Biomass Equipement Monitoring">BikeBox</a>
+              <a href="https://github.com/Nazarah/Nazarah.github.io/blob/master/files/Dipor_Usability_Evaluation.pdf" style="text-align:center;" class="white-text" onclick="window.open('../files/Dipor_Usability_Evaluation.pdf')" target="_blank" title="Usability Evaluation of Dipor Dashboard">Dipor Dashboard Usability Evaluation</a>
             </div>
           </div>
           <br>
@@ -107,7 +107,7 @@
           <div class="view overlay zoom" id="mpass">
             <img class="img-fluid mx-auto d-block wow slideInRight delay-2s" src="img/mpass.jpg" alt="Saalasti">
             <div class="mask flex-center rgba-cyan-strong">
-              <p style="text-align:center;" class="white-text">MPASSid Developer's Portal</a>
+              <a href="https://github.com/Nazarah/Nazarah.github.io/blob/master/files/mPass_Developers_Portal.ppsx" style="text-align:center;" class="white-text" onclick="window.open('../files/mPass_Developers_Portal.ppsx')" target="_blank" title="Saalasti Web UI for Biomass Equipement Monitoring">BikeBox</a>
             </div>
           </div>
         </div>
@@ -297,7 +297,7 @@
           <br>
           <div class="d-flex justify-content-center">
             <div class="p-2">
-              <a href="https://github.com/Nazarah/UX-Portfolio" target="_blank" title="Nazarah - UX Portfolio">
+              <a href="https://github.com/Nazarah/weather-app-byacat/tree/master" target="_blank" title="Nazarah - GitHub">
                 <i class="fab fa-github fa-3x" style="padding:0 5px;"></i>
               </a>
             </div>
