--- a/index.html
+++ b/index.html
@@ -217,8 +217,15 @@
           <div class="timeline">
             <div class="timelinecontainer left">
               <div class="content">
+                <h5><span class="fas fa-briefcase"></span> Software Development Trainee</h5>
+                <p class="text-muted"><span class="far fa-clock"></span> March 2019 - Present</p>
+                <p>Saranen Consulting - Tampere Finland</p>
+              </div>
+            </div>
+            <div class="timelinecontainer left">
+              <div class="content">
                 <h5><span class="fas fa-briefcase"></span> UI - UX Designer</h5>
-                <p class="text-muted"><span class="far fa-clock"></span> 2016 - Present</p>
+                <p class="text-muted"><span class="far fa-clock"></span> June 2016 - January 2019</p>
                 <p>Sampo Software Oy - Tampere, Finland</p>
               </div>
             </div>
