--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     </div>
   </nav>
   <!--navbar ends-->
-  <!--1st parallax section starts-->
+  <!--1st parallax section starts: Intro-->
   <div class="container-fluid .justify-content-center" id="slide1">
     <h1 style="margin-bottom:20px;text-align:center;" class="animated fadeIn delay-1s">Nazia Hasan</h1>
     <h2 style="margin-bottom:20px;text-align:center;" class="animated fadeIn delay-2s">UI / UX Designer</h2>
@@ -70,8 +70,8 @@
         <a href="https://github.com/Nazarah/Nazarah.github.io/blob/master/files/Nazia_Hasan_CV.pdf"  onclick="window.open('../files/Nazia_Hasan_CV.pdf')" target="_blank" class="btn btn-info" title="Nazia_Hasan_Resume.pdf">Check Out My CV</a>
       </p>
   </div>
-  <!--1st parallax section ends-->
-  <!--1st normal section starts-->
+  <!--1st parallax section: Intro ends-->
+  <!--1st normal section starts: Portfolio-->
   <section id="portfolio">
     <div class="container-fluid" id="slide2">
       <h2 style="text-align:center;" class="wow fadeIn delay-1s">Portfolio</h2>
@@ -114,8 +114,8 @@
       </div>
     </div>
   </section>
-  <!--1st normal section ends-->
-  <!--2nd parallax section starts-->
+  <!--1st normal section: Portfolio ends-->
+  <!--2nd parallax section starts: Skills-->
   <section id="skills">
     <div class="container-fluid" id="slide3">
       <h2 style="text-align:center;" class="wow fadeIn delay-1s">Skills</h2>
@@ -206,8 +206,8 @@
       </div>
     </div>
   </section>
-  <!--2nd parallax section ends-->
-  <!--2nd normal section starts-->
+  <!--2nd parallax section: Skills ends-->
+  <!--2nd normal section starts: Experience-->
   <section id="experience">
     <div class="container-fluid" id="slide4">
       <h2 style="text-align:center;" class="wow fadeIn">Experiences</h2>
@@ -217,8 +217,29 @@
           <div class="timeline">
             <div class="timelinecontainer left">
               <div class="content">
+                <h5><span class="fas fa-briefcase"></span>Design Lead (Dashboard & Marketplace)</h5>
+                <p class="text-muted"><span class="far fa-clock"></span> April 2021 - Present</p>
+                <p>Platform of Trust - Tampere Finland</p>
+              </div>
+            </div>
+            <div class="timelinecontainer left">
+              <div class="content">
+                <h5><span class="fas fa-briefcase"></span>Project Manager (API Design & DX)</h5>
+                <p class="text-muted"><span class="far fa-clock"></span> February 2020 - March 2021</p>
+                <p>Platform of Trust - Tampere Finland</p>
+              </div>
+            </div>
+            <div class="timelinecontainer left">
+              <div class="content">
+                <h5><span class="fas fa-briefcase"></span> DX Developer</h5>
+                <p class="text-muted"><span class="far fa-clock"></span> July 2019 - January 2020</p>
+                <p>Platform of Trust - Tampere Finland</p>
+              </div>
+            </div>
+            <div class="timelinecontainer left">
+              <div class="content">
                 <h5><span class="fas fa-briefcase"></span> Software Development Trainee</h5>
-                <p class="text-muted"><span class="far fa-clock"></span> March 2019 - Present</p>
+                <p class="text-muted"><span class="far fa-clock"></span> March 2019 - June 2019</p>
                 <p>Saranen Consulting - Tampere Finland</p>
               </div>
             </div>
