--- a/index.html
+++ b/index.html
@@ -224,6 +224,13 @@
             </div>
             <div class="timelinecontainer left">
               <div class="content">
+                <h5><span class="fas fa-briefcase"></span> Software Development Trainee</h5>
+                <p class="text-muted"><span class="far fa-clock"></span> March 2019 - June 2019</p>
+                <p>Saranen Consulting - Tampere Finland</p>
+              </div>
+            </div>
+            <div class="timelinecontainer left">
+              <div class="content">
                 <h5><span class="fas fa-briefcase"></span> UI - UX Designer</h5>
                 <p class="text-muted"><span class="far fa-clock"></span> June 2016 - January 2019</p>
                 <p>Sampo Software Oy - Tampere, Finland</p>
