--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
           <div class="timeline">
             <div class="timelinecontainer left">
               <div class="content">
-                <h5><span class="fas fa-briefcase"></span> Software Development Trainee</h5>
+                <h5><span class="fas fa-briefcase"></span> DUP Software Development Trainee</h5>
                 <p class="text-muted"><span class="far fa-clock"></span> March 2019 - June 2019</p>
                 <p>Saranen Consulting - Tampere Finland</p>
               </div>
