--- a/index.html
+++ b/index.html
@@ -217,16 +217,30 @@
           <div class="timeline">
             <div class="timelinecontainer left">
               <div class="content">
-                <h5><span class="fas fa-briefcase"></span> DUP Software Development Trainee</h5>
-                <p class="text-muted"><span class="far fa-clock"></span> March 2019 - June 2019</p>
-                <p>Saranen Consulting - Tampere Finland</p>
+                <h5><span class="fas fa-briefcase"></span> Design Lead (Dashboard & Marketplace)</h5>
+                <p class="text-muted"><span class="far fa-clock"></span> April 2021 - Present</p>
+                <p>Platform of Trust - Tampere, Finland</p>
+              </div>
+            </div>
+            <div class="timelinecontainer left">
+              <div class="content">
+                <h5><span class="fas fa-briefcase"></span> Project Manager (API Design & DX)</h5>
+                <p class="text-muted"><span class="far fa-clock"></span> February 2020 - March 2021</p>
+                <p>Platform of Trust - Tampere, Finland</p>
+              </div>
+            </div>
+            <div class="timelinecontainer left">
+              <div class="content">
+                <h5><span class="fas fa-briefcase"></span> DX Developer</h5>
+                <p class="text-muted"><span class="far fa-clock"></span> July 2019 - January 2020</p>
+                <p>Platform of Trust - Tampere, Finland</p>
               </div>
             </div>
             <div class="timelinecontainer left">
               <div class="content">
                 <h5><span class="fas fa-briefcase"></span> Software Development Trainee</h5>
-                <p class="text-muted"><span class="far fa-clock"></span> March 2019 - June 2019</p>
-                <p>Saranen Consulting - Tampere Finland</p>
+                <p class="text-muted"><span class="far fa-clock"></span> March 2019 - June 2019<</p>
+                <p>Saranen Consulting - Tampere, Finland</p>
               </div>
             </div>
             <div class="timelinecontainer left">
