index.html & file
Changed contact details
Changed Resume
Changed  Intro

--- a/index.html
+++ b/index.html
@@ -60,9 +60,10 @@
     <h1 style="margin-bottom:20px;text-align:center;" class="animated fadeIn delay-1s">Nazia Hasan</h1>
     <h2 style="margin-bottom:20px;text-align:center;" class="animated fadeIn delay-2s">UI / UX Designer</h2>
       <p style="margin-bottom:10px;text-align:center;" class="animated fadeInLeft delay-3s">
+        I aim to align business goals and usage satisfaction while conceptualizing  solutions.
         I am specialized in designing web services, apps and digital interfaces that are aesthetic and responsive.
-        I like to work within a team to achieve goals, grow brands and ensure excellent service experience for end-users.
-        I have a Master’s degree with UX major, 4.5+ years experience and prior expertise in Software Quality Assurance and Business Development.
+        I like to work with devs as a team to harmonize UX and implementation works.
+        I have a Master’s degree with UX major, 7+ years experience and prior expertise in Software Quality Assurance and Business Development.
         I am Empathetic, Detail-oriented and a Collaborative worker, ready to undertake new challenges.
       </p>
       <br>
@@ -318,7 +319,7 @@
             <span class="fas fa-at fa-lg"></span> nhasan1987@gmail.com
           </p>
           <p style="text-align:center;">
-            <span class="fas fa-phone fa-lg"></span> +358465760561
+            <span class="fas fa-phone fa-lg"></span> +358405775010
           </p>
           <br>
           <br>
