--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       </p>
       <br>
       <p style="text-align:center;" class="animated  bounceIn delay-4s">
-        <a href="https://github.com/Nazarah/Nazarah.github.io/blob/master/files/Nazia_Hasan_CV.pdf"  onclick="window.open('../files/Nazia_Hasan_CV.pdf')" target="_blank" class="btn btn-info" title="Nazia_Hasan_Resume.pdf">Check Out My CV</a>
+        <a href="https://github.com/Nazarah/Nazarah.github.io/blob/master/files/Nazia_Hasan_CV.pdf"  onclick="window.open('../files/Nazia_Hasan_CV.pdf')" target="_blank" class="btn btn-info" title="Nazia_Hasan_CVpdf">Check Out My CV</a>
       </p>
   </div>
   <!--1st parallax section: Intro ends-->
