--- a/index.html
+++ b/index.html
@@ -126,7 +126,8 @@
           <div class="view overlay zoom">
             <img class="img-fluid mx-auto d-block wow bounceIn delay-2s" src="img/userResearch.png" alt="User Research">
             <div class="mask flex-center rgba-cyan-strong">
-              <p style="text-align:center;" class="white-text"><b>User Research</b><br>Interview</p>
+              <p style="text-align:center;" class="white-text"><b>User Research</b><br>Interviewing is my most favorite
+              user research method.</p>
             </div>
           </div>
           <br>
