--- a/index.html
+++ b/index.html
@@ -126,8 +126,8 @@
           <div class="view overlay zoom">
             <img class="img-fluid mx-auto d-block wow bounceIn delay-2s" src="img/userResearch.png" alt="User Research">
             <div class="mask flex-center rgba-cyan-strong">
-              <p style="text-align:center;" class="white-text"><b>User Research</b><br>Interviewing is my most favorite
-              user research method.</p>
+              <p style="text-align:center;" class="white-text"><b>User Research</b><br><b>Interviewing</b> is my most favorite
+              user research method to understand users' pain points. <b>Affinity diagrams</b> and <b>Persona</b> creation aid me to isolate key problem scenarios and ideate solution proposals.</p>
             </div>
           </div>
           <br>
