--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
           <div class="view overlay zoom">
             <img class="img-fluid mx-auto d-block wow bounceIn delay-2s" src="img/userResearch.png" alt="User Research">
             <div class="mask flex-center rgba-cyan-strong">
-              <p style="text-align:center;" class="white-text"><b>User Research</b><br><b>Interviewing</b> is my most favorite
+              <p style="text-align:center;" class="white-text"><h3>User Research</h3><br><br><b>Interviewing</b> is my most favorite
               user research method to understand users' pain points. <b>Affinity diagrams</b> and <b>Persona</b> creation aid me to isolate key problem scenarios and ideate solution proposals.</p>
             </div>
           </div>
@@ -137,7 +137,8 @@
           <div class="view overlay zoom">
             <img class="img-fluid mx-auto d-block wow bounceIn delay-2s" src="img/wireframing.png" alt="Wireframing and Prototyping">
             <div class="mask flex-center rgba-cyan-strong">
-              <p style="text-align:center;" class="white-text">Wireframing and Prototyping</p>
+              <p style="text-align:center;" class="white-text"><h3>Wireframing and Prototyping</h3><br><br>For ideating and user engagement, I love using low fidelity prototypes made either with pen-papers or balsamiq mockup.
+              As proposed ideas get feedback and interactions start to be apparent, I like to create mid-fidelity wireframes and protypes.</p>
             </div>
           </div>
           <br>
