--- a/index.html
+++ b/index.html
@@ -137,8 +137,8 @@
           <div class="view overlay zoom">
             <img class="img-fluid mx-auto d-block wow bounceIn delay-2s" src="img/wireframing.png" alt="Wireframing and Prototyping">
             <div class="mask flex-center rgba-cyan-strong">
-              <p style="text-align:center;" class="white-text"><b>Wireframing and Prototyping</b><br><br>For ideating and user engagement, I love using low fidelity prototypes made either with pen-papers or balsamiq mockup.
-              As proposed ideas get feedback and interactions start to be apparent, I like to create mid-fidelity wireframes and protypes.</p>
+              <p style="text-align:center;" class="white-text"><b>Wireframing and Prototyping</b><br><br>For ideating and user engagement, I love using <b>low-fidelity prototypes</b> made either with pen-papers or Balsamiq.
+              As proposed ideas get feedback and interactions start to be apparent, I like to create <b>wireframes</b> and protype them.</p>
             </div>
           </div>
           <br>
@@ -148,7 +148,8 @@
           <div class="view overlay zoom">
             <img class="img-fluid mx-auto d-block wow bounceIn delay-2s" src="img/usabilityEvaluation.png" alt="Usability Evaluation">
             <div class="mask flex-center rgba-cyan-strong">
-              <p style="text-align:center;" class="white-text">Usability Evaluation</p>
+              <p style="text-align:center;" class="white-text"><b>Usability Evaluation</b><br><br>In the beta stage of a product/feature, I like to conduct  <b>heuristic evaluation</b> following the proposed ones by Neilson-Molich.
+                Identifying potential usability issues helps me to prepare the purpose, tasks flow of subsequent <b>usability tests</b>.</p>
             </div>
           </div>
           <br>
@@ -158,7 +159,8 @@
           <div class="view overlay zoom">
             <img class="img-fluid mx-auto d-block wow bounceIn delay-2s" src="img/longTermStudy.png" alt="Long Term Usage Study">
             <div class="mask flex-center rgba-cyan-strong">
-              <p style="text-align:center;" class="white-text">Long Term Usage Study</p>
+              <p style="text-align:center;" class="white-text"><b>Long Term Usage Study</b><br><br>Although my preferred method is to <b>observe users</b> interacting with a product in their day-to-day natural settings, due to differences in timezone, place or other restrictions, this is not always feasible.
+              I try to compensate this limitations with requests for keeping <b>usage diaries</b> to interested participants and <b>weekly meetings</b> within the duration of the observation period.</p>
             </div>
           </div>
           <br>
@@ -170,7 +172,7 @@
           <div class="view overlay zoom">
             <img class="img-fluid mx-auto d-block wow bounceIn delay-2s" src="img/uiDesign.png" alt="UI Design">
             <div class="mask flex-center rgba-cyan-strong">
-              <p style="text-align:center;" class="white-text">UI Design</p>
+              <p style="text-align:center;" class="white-text"><b>UI Design</b><br><br>While working on designs, I try to put emphasis on <b>page structure</b>, <b>content organization</b> to aid <b>searching</b>, <b>navigation</b> fluidity and simple options for <b>inputting data</b> within the interface.</p>
             </div>
           </div>
           <br>
@@ -180,7 +182,8 @@
           <div class="view overlay zoom">
             <img class="img-fluid mx-auto d-block wow bounceIn delay-2s" src="img/responsiveWebDesign.png" alt="Responsive Web Design">
             <div class="mask flex-center rgba-cyan-strong">
-              <p style="text-align:center;" class="white-text">Responsive Web Design</p>
+              <p style="text-align:center;" class="white-text"><b>Responsive Web Design</b><br><br>I like to work with <b>mobile-first</b> design, as it helps to identify the minimum required content, UI elements and other interactions that should be present within each present view of an entire UI system.
+              Afterwards, I interpret and transfer made design choices for desktops or larger screen. However, this approach might change based on the platform or medium the intended solution is supposed to be used.</p>
             </div>
           </div>
           <br>
@@ -190,7 +193,8 @@
           <div class="view overlay zoom">
             <img class="img-fluid mx-auto d-block wow bounceIn delay-2s" src="img/serviceDesigning.png" alt="Service Design">
             <div class="mask flex-center rgba-cyan-strong">
-              <p style="text-align:center;" class="white-text">Service Design</p>
+              <p style="text-align:center;" class="white-text"><b>Low/No Code Development</b><br><br>To build up sales pitch for lighthouse customers, I can build <b>no/low code</b> solutions using appropriate service stack.
+                A crucial thing in creating such solutions is the presence of well designed APIs, proper documentations for using them and available resources for trying out the API fucntionalities.</p>
             </div>
           </div>
           <br>
@@ -200,7 +204,9 @@
           <div class="view overlay zoom">
             <img class="img-fluid mx-auto d-block wow bounceIn delay-2s" src="img/softwareTesting.png" alt="Software Quality Assurance">
             <div class="mask flex-center rgba-cyan-strong">
-              <p style="text-align:center;" class="white-text">Software Quality Assurance</p>
+              <p style="text-align:center;" class="white-text"><b>Software Quality Assurance</b><br><br> Before moving to Finland, I have worked as a SQA engineer with varience in my roles and responsibilities.
+              I did <b>requirement analysis</b>; <b>test-case</b> preparation, update and manage; manual and/or automated <b>test executions</b>; <b>bug tracking</b>, etc. 
+              I also managed an offshore SQA team for a while.</p>
             </div>
           </div>
           <br>
